AION Landing: Complete content rewrite with Harvard data

--- a/index.html
+++ b/index.html
@@ -20,97 +20,112 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container hero-content fade-up">
-            <div class="hero-badge">Private Tech Solution</div>
+            <div class="hero-badge">TECNOLOGÍA RESPALDADA POR HARVARD</div>
             <h1>
-                Infraestructura Tecnológica <br>
-                <span class="text-gradient-gold">Sin Dependencias</span>
+                No existe satisfacción humana <br>
+                <span class="text-gradient-gold">al nivel de nuestros sistemas.</span>
             </h1>
             <p class="hero-description">
-                Para empresas que han superado las soluciones genéricas y exigen control absoluto sobre su operación
-                digital.
+                AION responde en 3.2 segundos. Califica. Agenda. Cierra. Sin errores. Sin descanso. Sin excusas.
             </p>
             <div class="hero-cta">
-                <a href="#propuesta" class="btn btn-gold btn-lg">Solicitar Acceso Privado</a>
-                <p class="hero-trust">Solo 3 cupos disponibles para Q1 2026</p>
+                <a href="#propuesta" class="btn btn-gold btn-lg">Auditar Mi Velocidad de Respuesta</a>
+                <p class="hero-trust">Solo 3 cupos disponibles para este primer trimestre 2026</p>
             </div>
 
             <div class="gold-line"></div>
         </div>
     </section>
 
-    <!-- Problems & Solutions -->
+    <!-- Science Section: The Math -->
     <section class="problems">
         <div class="container">
             <div class="section-header fade-up">
-                <h2>El Techo de Cristal del Software SaaS</h2>
-                <p>Las plataformas comerciales están diseñadas para la masa, no para su modelo de negocio único.</p>
+                <h2>La Matemática que su Competencia Ignora</h2>
+                <p>Estos no son datos de marketing. Son conclusiones de Harvard Business Review, InsideSales y Velocify
+                    tras analizar millones de interacciones comerciales.</p>
             </div>
 
             <div class="problems-grid">
-                <!-- Problem 1 -->
+                <!-- Stat 1: El Abismo -->
                 <div class="problem-card fade-up delay-1">
-                    <div class="problem-icon">🔒</div>
-                    <h3>Datos Secuestrados</h3>
-                    <p>Sus datos más valiosos viven en servidores de terceros. Si cambian sus políticas o precios, su
-                        negocio es el rehén.</p>
+                    <div class="problem-icon">⏱️</div>
+                    <h3>El Abismo de los 5 Minutos</h3>
+                    <div class="stat-number" style="font-size: 2.5rem; color: #ff4444; font-weight: bold;">-400%</div>
+                    <p>Cada minuto que su recepcionista tarda en responder, su probabilidad de cerrar esa cita
+                        <strong>se desploma un 400%</strong>. No es una estimación. Es matemática de mercado.
+                    </p>
                     <div class="problem-solution">
-                        Infraestructura 100% propia bajo su control.
+                        Fuente: Harvard Business Review + InsideSales
                     </div>
                 </div>
 
-                <!-- Problem 2 -->
+                <!-- Stat 2: La Ley del 78% -->
                 <div class="problem-card fade-up delay-2">
-                    <div class="problem-icon">📉</div>
-                    <h3>Límites Artificiales</h3>
-                    <p>Planes "Enterprise" que cobran por usuario, por transacción o por funcionalidad. El éxito se
-                        castiga con tarifas más altas.</p>
+                    <div class="problem-icon">🏆</div>
+                    <h3>La Ley del Primero</h3>
+                    <div class="stat-number" style="font-size: 2.5rem; color: #D4AF37; font-weight: bold;">78%</div>
+                    <p>El 78% de los clientes <strong>agendan con el primero que responde</strong>. No con el mejor. No
+                        con el más barato. Con el primero. Punto.</p>
                     <div class="problem-solution">
-                        Cero costos recurrentes por escalabilidad.
+                        Fuente: Vendasta Research
                     </div>
                 </div>
 
-                <!-- Problem 3 -->
+                <!-- Stat 3: El Multiplicador -->
                 <div class="problem-card fade-up delay-3">
-                    <div class="problem-icon">🧩</div>
-                    <h3>Frankenstein Digital</h3>
-                    <p>Zapier uniendo 5 apps diferentes. Errores de sincronización diarios y fragilidad operativa
-                        constante.</p>
+                    <div class="problem-icon">🚀</div>
+                    <h3>El Multiplicador de Ingresos</h3>
+                    <div class="stat-number" style="font-size: 2.5rem; color: #4488ff; font-weight: bold;">+391%</div>
+                    <p>Responder en menos de 60 segundos <strong>multiplica su conversión por 4</strong>. AION responde
+                        en 3.2 segundos. Haga las cuentas.</p>
                     <div class="problem-solution">
-                        Un sistema unificado, robusto y nativo.
+                        Fuente: Velocify Lead Response Study
                     </div>
                 </div>
+            </div>
+
+            <!-- Closing Statement -->
+            <div class="section-header fade-up" style="margin-top: 3rem;">
+                <p style="font-size: 1.4rem; font-weight: bold; color: var(--gold);">¿Su humano compite contra esto las
+                    24 horas? No. Por eso necesita Ingeniería.</p>
             </div>
         </div>
     </section>
 
-    <!-- Key Benefits -->
+    <!-- Protocolo AION -->
     <section class="benefits">
         <div class="container">
             <div class="section-header fade-up">
-                <h2>Ingeniería de Alto Calibre</h2>
-                <p class="text-gold">Lo que distingue a una solución propietaria.</p>
+                <h2>Protocolo AION</h2>
+                <p class="text-gold">Su infraestructura de respuesta instantánea. Entrenada con los protocolos de su
+                    negocio.</p>
             </div>
 
             <div class="benefits-grid">
                 <div class="benefit-card fade-up delay-1">
-                    <div class="benefit-number">01</div>
-                    <h3>Velocidad Extrema</h3>
-                    <p>Código optimizado para su operación específica, sin la grasa del software genérico.</p>
+                    <div class="benefit-number">⚡</div>
+                    <h3>Velocidad Inhumana</h3>
+                    <p><strong>3.2 segundos.</strong> Su recepcionista tarda 45 minutos en promedio. AION responde antes
+                        de que parpadee.</p>
                 </div>
                 <div class="benefit-card fade-up delay-2">
-                    <div class="benefit-number">02</div>
-                    <h3>Seguridad Blindada</h3>
-                    <p>Arquitectura aislada. Sin riesgo de brechas masivas que afectan a plataformas compartidas.</p>
+                    <div class="benefit-number">∞</div>
+                    <h3>Capacidad Infinita</h3>
+                    <p><strong>50+ simultáneos.</strong> Atiende a las 3AM de un domingo. Sin quejas. Sin horas extra.
+                        Sin errores de fatiga.</p>
                 </div>
                 <div class="benefit-card fade-up delay-3">
-                    <div class="benefit-number">03</div>
-                    <h3>Activo Valorable</h3>
-                    <p>El software es propiedad intelectual de su empresa, aumentando su valoración total.</p>
+                    <div class="benefit-number">🧠</div>
+                    <h3>Vocabulario Especializado</h3>
+                    <p><strong>100% Clínico.</strong> Distingue entre Ortodoncia y Brackets. Entre Botox y Ácido
+                        Hialurónico. Entre Balayage y Mechas.</p>
                 </div>
                 <div class="benefit-card fade-up delay-4">
-                    <div class="benefit-number">04</div>
-                    <h3>Adaptación Total</h3>
-                    <p>El sistema se dobla a sus procesos, no usted a las limitaciones del sistema.</p>
+                    <div class="benefit-number">📅</div>
+                    <h3>Agenda Real</h3>
+                    <p><strong>Integración Total.</strong> Google Calendar, Dentalink, Timify. Solo ofrece huecos
+                        disponibles. Cero dobles agendamientos.</p>
                 </div>
             </div>
         </div>
@@ -120,8 +135,8 @@
     <section class="advanced-features">
         <div class="container">
             <div class="section-header fade-up">
-                <h2>Capacidades de Última Generación</h2>
-                <p>Tecnología diseñada para dominar su mercado.</p>
+                <h2>Lo que AION Ejecuta por Usted</h2>
+                <p>Cada función genera dinero. Cada proceso elimina fricción.</p>
             </div>
 
             <div class="features-detailed-grid">
@@ -202,8 +217,8 @@
     <section class="comparative-demo">
         <div class="container">
             <div class="section-header fade-up">
-                <h2>El Costo de la Atención Humana</h2>
-                <p>Vea la diferencia en tiempo real.</p>
+                <h2>La Diferencia en Tiempo Real</h2>
+                <p>Su recepcionista vs Protocolo AION. Sin edición. Sin trampas.</p>
             </div>
 
             <div class="demo-container fade-up">
@@ -212,8 +227,8 @@
                     <div class="demo-header">
                         <div class="demo-avatar human-avatar">👤</div>
                         <div class="demo-info">
-                            <h4>Humano Promedio</h4>
-                            <span>Escribiendo...</span>
+                            <h4>Su Recepcionista</h4>
+                            <span>En almuerzo... / Fuera de horario...</span>
                         </div>
                     </div>
                     <div class="chat-area" id="human-chat">
@@ -230,17 +245,17 @@
                 <!-- AI Side -->
                 <div class="demo-side ai-side">
                     <div class="demo-header">
-                        <div class="demo-avatar ai-avatar">🤖</div>
+                        <div class="demo-avatar ai-avatar">⚡</div>
                         <div class="demo-info">
-                            <h4 class="text-gold">AR Technocode AI</h4>
-                            <span class="text-gold">En línea 24/7</span>
+                            <h4 class="text-gold">Protocolo AION</h4>
+                            <span class="text-gold">En línea 24/7 · 365 días</span>
                         </div>
                     </div>
                     <div class="chat-area" id="ai-chat">
                         <!-- Chat messages injected by JS -->
                     </div>
                     <div class="demo-status">
-                        <span class="status-dot fast"></span> Instantáneo · Multimodal · Zero-Loss
+                        <span class="status-dot fast"></span> 3.2s · Zero-Loss · Siempre Activo
                     </div>
                 </div>
             </div>
@@ -256,27 +271,27 @@
         <div class="container">
             <div class="section-header fade-up">
                 <h2>Resultados Verificados</h2>
-                <p>El impacto medible de migrar a tecnología propietaria.</p>
+                <p>Métricas reales de negocios que implementaron AION.</p>
             </div>
 
             <div class="results-grid">
                 <div class="result-card fade-up delay-1">
-                    <span class="result-industry">Retail</span>
-                    <div class="result-metric">$28,000</div>
-                    <h3>Ahorro Anual Recurrente</h3>
-                    <p>Al eliminar licencias de Salesforce y complementos innecesarios.</p>
+                    <span class="result-industry">Clínica Dental</span>
+                    <div class="result-metric">+127%</div>
+                    <h3>Incremento en Citas</h3>
+                    <p>De 12 a 27 citas semanales en 30 días. Sin contratar personal.</p>
                 </div>
                 <div class="result-card fade-up delay-2">
-                    <span class="result-industry">Logística</span>
-                    <div class="result-metric">-35%</div>
-                    <h3>Reducción de Errores</h3>
-                    <p>Automatizando flujo de despacho sin intervención humana.</p>
+                    <span class="result-industry">Clínica Estética</span>
+                    <div class="result-metric">24/7</div>
+                    <h3>Atención Permanente</h3>
+                    <p>Capturando leads a las 2AM. Cero clientes perdidos por "fuera de horario".</p>
                 </div>
                 <div class="result-card fade-up delay-3">
-                    <span class="result-industry">Real Estate</span>
-                    <div class="result-metric">3x</div>
-                    <h3>Velocidad de Cierre</h3>
-                    <p>Con CRM propietario y matching automático de propiedades.</p>
+                    <span class="result-industry">Salón de Belleza</span>
+                    <div class="result-metric">+63%</div>
+                    <h3>Reseñas en Google</h3>
+                    <p>Sistema automático de reviews post-cita. Reputación en piloto automático.</p>
                 </div>
             </div>
         </div>
