Add detailed scientific study info: Dr. Oldroyd MIT, Lead Connect, Velocify

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="container">
             <div class="section-header fade-up">
                 <h2>La Matemática que su Competencia Ignora</h2>
-                <p>Estos no son datos de marketing. Son conclusiones de Harvard Business Review, InsideSales y Velocify
-                    tras analizar millones de interacciones comerciales.</p>
+                <p>Estos no son datos de marketing. Son conclusiones de estudios académicos publicados por Harvard
+                    Business Review, el MIT y empresas líderes en análisis de ventas.</p>
             </div>
 
             <div class="problems-grid">
@@ -52,11 +52,13 @@
                     <div class="problem-icon">⏱️</div>
                     <h3>El Abismo de los 5 Minutos</h3>
                     <div class="stat-number" style="font-size: 2.5rem; color: #ff4444; font-weight: bold;">-400%</div>
-                    <p>Cada minuto que su recepcionista tarda en responder, su probabilidad de cerrar esa cita
-                        <strong>se desploma un 400%</strong>. No es una estimación. Es matemática de mercado.
-                    </p>
+                    <p>El <strong>Dr. James Oldroyd</strong> del MIT, en colaboración con InsideSales.com, analizó más
+                        de <strong>100,000 intentos de contacto</strong> durante 3 años. Su conclusión: esperar 10
+                        minutos en lugar de 5 para responder reduce las probabilidades de calificar un lead en un 400%.
+                        Después de 5 minutos, las probabilidades caen un 80%.</p>
                     <div class="problem-solution">
-                        Fuente: Harvard Business Review + InsideSales
+                        📚 Estudio: "Lead Response Management Study" – Dr. James Oldroyd, MIT & InsideSales.com
+                        (2007-2011)
                     </div>
                 </div>
 
@@ -65,10 +67,12 @@
                     <div class="problem-icon">🏆</div>
                     <h3>La Ley del Primero</h3>
                     <div class="stat-number" style="font-size: 2.5rem; color: #D4AF37; font-weight: bold;">78%</div>
-                    <p>El 78% de los clientes <strong>agendan con el primero que responde</strong>. No con el mejor. No
-                        con el más barato. Con el primero. Punto.</p>
+                    <p>Una encuesta de <strong>Lead Connect</strong> reveló que el <strong>78% de los consumidores
+                            compran al primer negocio que responde</strong> a su consulta. La velocidad supera a la
+                        calidad percibida, al precio e incluso a la reputación. El primero en responder gana la atención
+                        y la confianza.</p>
                     <div class="problem-solution">
-                        Fuente: Vendasta Research
+                        📚 Estudio: "Lead Connect Survey" – Publicado por Vendasta Research (2023)
                     </div>
                 </div>
 
@@ -77,18 +81,21 @@
                     <div class="problem-icon">🚀</div>
                     <h3>El Multiplicador de Ingresos</h3>
                     <div class="stat-number" style="font-size: 2.5rem; color: #4488ff; font-weight: bold;">+391%</div>
-                    <p>Responder en menos de 60 segundos <strong>multiplica su conversión por 4</strong>. AION responde
-                        en 3.2 segundos. Haga las cuentas.</p>
+                    <p><strong>Velocify</strong> (ahora parte de ICE Mortgage Technology) analizó millones de
+                        transacciones de leads web. Resultado: responder en el <strong>primer minuto incrementa la
+                            conversión en 391%</strong>. Esperar una hora reduce las probabilidades al 36%. AION
+                        responde en 3.2 segundos.</p>
                     <div class="problem-solution">
-                        Fuente: Velocify Lead Response Study
+                        📚 Estudio: "The Ultimate Contact Strategy" – Velocify Lead Response Study
                     </div>
                 </div>
             </div>
 
             <!-- Closing Statement -->
             <div class="section-header fade-up" style="margin-top: 3rem;">
-                <p style="font-size: 1.4rem; font-weight: bold; color: var(--gold);">¿Su humano compite contra esto las
-                    24 horas? No. Por eso necesita Ingeniería.</p>
+                <p style="font-size: 1.4rem; font-weight: bold; color: var(--gold);">¿Su equipo humano puede competir
+                    contra esta matemática las 24 horas del día, los 365 días del año? No. Por eso necesita Ingeniería,
+                    no más personal.</p>
             </div>
         </div>
     </section>
