Add About AR Technocode section with company details and principles

--- a/index.html
+++ b/index.html
@@ -304,6 +304,66 @@
         </div>
     </section>
 
+    <!-- About AR Technocode -->
+    <section class="about-company">
+        <div class="container">
+            <div class="section-header fade-up">
+                <h2>Quiénes Somos</h2>
+                <p class="text-gold">AR Technocode – Ingeniería de Sistemas Privados</p>
+            </div>
+
+            <div class="about-content fade-up">
+                <div class="about-grid">
+                    <div class="about-item">
+                        <div class="about-icon">🏢</div>
+                        <h3>Empresa de Tecnología Privada</h3>
+                        <p>AR Technocode es una firma de <strong>desarrollo de infraestructura tecnológica
+                                propietaria</strong>. No revendemos software de terceros. Diseñamos, construimos y
+                            desplegamos sistemas que son <strong>100% propiedad de nuestros clientes</strong>.</p>
+                    </div>
+
+                    <div class="about-item">
+                        <div class="about-icon">🔒</div>
+                        <h3>Filosofía "Private Tech"</h3>
+                        <p>Creemos que las empresas exitosas merecen <strong>independencia tecnológica total</strong>.
+                            Nuestros sistemas no dependen de APIs externas, no cobran por usuario, y no tienen límites
+                            artificiales. Su tecnología es suya, para siempre.</p>
+                    </div>
+
+                    <div class="about-item">
+                        <div class="about-icon">🎯</div>
+                        <h3>Especialización Vertical</h3>
+                        <p>Nos enfocamos exclusivamente en <strong>clínicas dentales, clínicas estéticas y salones de
+                                belleza</strong>. Esta especialización nos permite entender el lenguaje técnico de cada
+                            industria y entregar soluciones que funcionan desde el día uno.</p>
+                    </div>
+
+                    <div class="about-item">
+                        <div class="about-icon">⚙️</div>
+                        <h3>Ingeniería, No Magia</h3>
+                        <p>Protocolo AION no es magia. Es <strong>ingeniería aplicada</strong> basada en estudios
+                            científicos de Harvard, MIT, Velocify y Lead Connect. Reducimos la fricción entre el
+                            paciente que pregunta y la cita que se agenda.</p>
+                    </div>
+                </div>
+
+                <div class="about-principles fade-up" style="margin-top: 2rem;">
+                    <h3 style="color: var(--gold); margin-bottom: 1rem;">Nuestros Principios</h3>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin-bottom: 0.8rem;">✓ <strong>Transparencia Total</strong> – Sin letra pequeña,
+                            sin costos ocultos, sin sorpresas.</li>
+                        <li style="margin-bottom: 0.8rem;">✓ <strong>Propiedad Completa</strong> – Usted es dueño del
+                            código, los datos y la infraestructura.</li>
+                        <li style="margin-bottom: 0.8rem;">✓ <strong>Resultados Medibles</strong> – Si no incrementamos
+                            sus citas, le devolvemos su inversión.</li>
+                        <li style="margin-bottom: 0.8rem;">✓ <strong>Soporte Continuo</strong> – Equipo técnico
+                            disponible para ajustes y optimizaciones.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Final CTA with Booking System -->
     <section id="propuesta" class="cta-section">
         <div class="container container-narrow">
