Update hero, CTA button, simulator AION , custom software section

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <div class="container hero-content fade-up">
             <div class="hero-badge">TECNOLOGÍA RESPALDADA POR HARVARD</div>
             <h1>
-                No existe satisfacción humana <br>
+                No existe capacidad humana <br>
                 <span class="text-gradient-gold">al nivel de nuestros sistemas.</span>
             </h1>
             <p class="hero-description">
                 AION responde en 3.2 segundos. Califica. Agenda. Cierra. Sin errores. Sin descanso. Sin excusas.
             </p>
             <div class="hero-cta">
-                <a href="#propuesta" class="btn btn-gold btn-lg">Auditar Mi Velocidad de Respuesta</a>
+                <a href="#propuesta" class="btn btn-gold btn-lg">Agendar Cita con Nuestro Equipo</a>
                 <p class="hero-trust">Solo 3 cupos disponibles para este primer trimestre 2026</p>
             </div>
 
@@ -226,6 +226,9 @@
             <div class="section-header fade-up">
                 <h2>La Diferencia en Tiempo Real</h2>
                 <p>Su recepcionista vs Protocolo AION. Sin edición. Sin trampas.</p>
+                <p class="demo-price"
+                    style="margin-top: 1rem; color: var(--gold); font-size: 1.2rem; font-weight: 600;">Protocolo AION
+                    desde <strong>$497 USD/mes</strong></p>
             </div>
 
             <div class="demo-container fade-up">
@@ -254,7 +257,7 @@
                     <div class="demo-header">
                         <div class="demo-avatar ai-avatar">⚡</div>
                         <div class="demo-info">
-                            <h4 class="text-gold">Protocolo AION</h4>
+                            <h4 class="text-gold">AION</h4>
                             <span class="text-gold">En línea 24/7 · 365 días</span>
                         </div>
                     </div>
@@ -360,6 +363,42 @@
                             disponible para ajustes y optimizaciones.</li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Custom Software Info -->
+    <section class="custom-software-info">
+        <div class="container">
+            <div class="info-text fade-up"
+                style="max-width: 900px; margin: 0 auto; text-align: center; padding: 60px 20px;">
+                <h2 style="margin-bottom: 1.5rem;">Más Allá de AION: Desarrollo de Software a Medida</h2>
+
+                <p style="font-size: 1.1rem; line-height: 1.8; color: var(--white-soft); margin-bottom: 1.5rem;">
+                    Aunque Protocolo AION es nuestra solución estrella para automatización de atención al cliente, AR
+                    Technocode es antes que nada una <strong style="color: var(--gold);">empresa de desarrollo de
+                        software totalmente a medida</strong>. Construimos sistemas personalizados desde cero, adaptados
+                    específicamente a las necesidades únicas de su negocio.
+                </p>
+
+                <p style="font-size: 1.1rem; line-height: 1.8; color: var(--white-soft); margin-bottom: 1.5rem;">
+                    Esto significa que si usted necesita un CRM específico para su industria, un sistema de gestión de
+                    inventario, una plataforma de e-commerce personalizada, un dashboard de analytics, o cualquier otra
+                    solución tecnológica, podemos diseñarla y construirla para usted. No existe la limitación de "esto
+                    no se puede hacer" – si se puede programar, lo podemos crear.
+                </p>
+
+                <p style="font-size: 1.1rem; line-height: 1.8; color: var(--white-soft); margin-bottom: 1.5rem;">
+                    Cada sistema que desarrollamos es <strong style="color: var(--gold);">100% propiedad del
+                        cliente</strong>. No hay licencias mensuales eternas, no hay dependencia de terceros, no hay
+                    límites artificiales. Usted recibe el código fuente, la documentación técnica y el control total
+                    sobre su infraestructura tecnológica.
+                </p>
+
+                <p style="font-size: 1rem; color: var(--white-subtle); font-style: italic;">
+                    ¿Tiene un proyecto en mente que requiere desarrollo personalizado? Agende una cita con nuestro
+                    equipo técnico para explorar las posibilidades.
+                </p>
             </div>
         </div>
     </section>
